# hithesis-docx

./: .gitignore  AGENTS.md  LICENSE  README.md  dev-notes.md  hithesis-format-spec.md  md-to-docx-skill.md  md转Word排版-skill.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-05-25-latex-formula-rendering.md
docs/superpowers/specs/: 2026-05-29-bachelor-harbin-format-fix-design.md
examples/: references.bib  test_latex_formula.py  thesis_example.py
examples/thesis_split/: thesis_main.py
examples/thesis_split/back/: acknowledgements.py  appendix.py  authorization.py  conclusion.py  publications.py  references.py  resume.py
examples/thesis_split/body/: __init__.py  chapter1_intro.py  chapter2_theory.py  chapter3_fem.py
examples/thesis_split/front/: abstract_cn.py  abstract_en.py  cover.py  denotation.py
hitthesis/: __init__.py  _word_com_helper.py  authorization.py  compile.py  config.py  contexts.py  cover.py  document.py  docx_postproc.py  elements.py  footnote.py  latex_render.py  ooxml_utils.py  reference_db.py  toc_postproc.py
tests/: test_appendix.py  test_basic.py  test_bookmark_id.py  test_cross_chapter_cite.py  test_footnote_reset.py  test_hyphenation.py  test_hyphenation_integration.py  test_refs.py
