[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hithesis-docx"
version = "0.1.0"
description = "Python library for generating HIT thesis .docx files"
readme = "README.md"
license = {text = "CC BY-NC 4.0"}
requires-python = ">=3.9"
dependencies = [
    "python-docx>=1.0.0",
    "bibtexparser>=1.4.0",
    "lxml>=5.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "latex2word>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
